# botchling_backend

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: app.rs  application.rs  error.rs  infrastructure.rs  logger.rs  main.rs
src/application/: ingest.rs  worker.rs
src/application/ingest/: ingester.rs  reader.rs
src/config/: config.rs
src/db/: db.rs
src/domain/: event.rs  session.rs
src/domain/event/: chat_sent.rs  login.rs  logout.rs  map_change.rs  mob_kill.rs  take_item.rs  teleport.rs  walk.rs
src/infrastructure/: config.rs  discord.rs  logger.rs  mongo.rs  postgres.rs
src/logger/: logger.rs
