[package]
name = "botchling"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenv = "0.15.0"
futures = "0.3.32"
mongodb = { version = "3.7.0", features = ["sync"] }
refinery = { version = "0.9.1", features = ["postgres"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = {version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
